Bug 87393 - [8/9 Regression] gcc/cp/parser.c:13967:37:Unused Entity Issue: expression result unused: -Wunused-value since r251026
Summary: [8/9 Regression] gcc/cp/parser.c:13967:37:Unused Entity Issue: expression res...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 9.0
: P3 normal
Target Milestone: 9.0
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-23 06:59 UTC by Martin Liška
Modified: 2018-11-21 16:46 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail: 8.2.0, 9.0
Last reconfirmed: 2018-11-21 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liška 2018-09-23 06:59:14 UTC
Following code has unused value:

...
      /* Consume the `{' token.  */
      matching_braces braces;
      braces.consume_open (parser)->location;
      /* Parse the declarations.  */
...
Comment 2 Jakub Jelinek 2018-11-21 16:43:06 UTC
Author: jakub
Date: Wed Nov 21 16:42:34 2018
New Revision: 266347

URL: https://gcc.gnu.org/viewcvs?rev=266347&root=gcc&view=rev
Log:
	PR c++/87393
	* parser.c (cp_parser_linkage_specification): Remove useless
	dereference of the consume_open method result.

Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/parser.c
Comment 3 Jakub Jelinek 2018-11-21 16:46:47 UTC
Fixed on the trunk, not worth backporting.