	PR c++/87393 	* parser.c (cp_parser_linkage_specification): Remove useless 	dereference of the consume_open method result.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@266347 138bc75d-0d04-0410-961f-82ee72b054a4